[package]
name = "dragon-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.30.3"
glutin-winit = "0.2.1"
winit = "0.27.5"
raw-window-handle = "0.5.0"
egui = "0.20.0"
gl = "0.14.0"

[build-dependencies]
gl_generator = "0.14.0"
